Compiles JS and SCSS into /assets/ folder

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
     <title>Dev Boilerplate</title>
   </head>
   <body>
