--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,6 @@
     <title>Dev Boilerplate</title>
   </head>
   <body>
-    <h1>asdasdasdasd</h1>
+    <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
