--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
-    <title>Dev Boilerplate</title>
+    <title>Weather App</title>
   </head>
   <body>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/js/scripts.min.js"></script>
   </body>
 </html>
