Current, min and max temperatures mobile styles.

--- a/app/index.html
+++ b/app/index.html
@@ -21,20 +21,17 @@
         <h3
           class="weather-data__temperature-item weather-data__temperature-item--min"
         >
-          <span class="weather-data__temperature-value">32</span>
-          <span class="weather-data__temperature-unit">c</span>
+          <span class="weather-data__temperature-value">12</span
         </h3>
         <h2
           class="weather-data__temperature-item weather-data__temperature-item--main"
         >
-          <span class="weather-data__temperature-value">32</span>
-          <span class="weather-data__temperature-unit">c</span>
+          <span class="weather-data__temperature-value">32</span
         </h2>
         <h3
           class="weather-data__temperature-item weather-data__temperature-item--max"
         >
-          <span class="weather-data__temperature-value">32</span>
-          <span class="weather-data__temperature-unit">c</span>
+          <span class="weather-data__temperature-value">46</span
         </h3>
       </div>
       <h4 class="weather-data__description">light snow</h4>
@@ -72,14 +69,3 @@
     <script src="./assets/js/scripts.min.js"></script>
   </body>
 </html>
-
-<!-- const cityName = data['name'];
-const dataCalculation = data['dt'];
-const currentWeather = data['weather'][0]['description'];
-const currentWeatherIcon = data['weather'][0]['icon'];
-const currentTemperature = data['main']['temp'];
-const temperatureMax = data['main']['temp_max'];
-const temperatureMin = data['main']['temp_min'];
-const timeSunrise = data['sys']['sunrise'];
-const timeSunset = data['sys']['sunset'];
-const cloudinessPercent = data['clouds']['all']; -->
