--- a/app/index.html
+++ b/app/index.html
@@ -17,47 +17,48 @@
   </head>
   <body>
     <div class="weather-data">
-      <div class="weather-data__temperature">
-        <h3
-          class="weather-data__temperature-item weather-data__temperature-item--min"
-        >
-          <span class="weather-data__temperature-value">12</span
-        </h3>
-        <h2
-          class="weather-data__temperature-item weather-data__temperature-item--main"
-        >
-          <span class="weather-data__temperature-value">32</span
-        </h2>
-        <h3
-          class="weather-data__temperature-item weather-data__temperature-item--max"
-        >
-          <span class="weather-data__temperature-value">46</span
-        </h3>
+      <div class="weather-data__upper">
+        <div class="weather-data__temperature">
+          <h3
+            class="weather-data__temperature-item weather-data__temperature-item--min"
+          >
+            <span class="weather-data__temperature-value">12</span>
+          </h3>
+          <h2
+            class="weather-data__temperature-item weather-data__temperature-item--main"
+          >
+            <span class="weather-data__temperature-value">32</span>
+          </h2>
+          <h3
+            class="weather-data__temperature-item weather-data__temperature-item--max"
+          >
+            <span class="weather-data__temperature-value">46</span>
+          </h3>
+        </div>
+        <h4 class="weather-data__description">light snow</h4>
       </div>
-      <h4 class="weather-data__description">light snow</h4>
-      <h3 class="weather-data__location">London</h3>
-      <div class="weather-data__time">Mon | FEB 11 | 17:20</div>
-      <div class="weather-data__figures">
-        <div class="weather-data__figure">
-          <span class="weather-data__figure-value">90%</span>
-          <span class="weather-data__figure-icon"
-            ><i class="fas fa-cloud"></i
-          ></span>
-          <span class="weather-data__figure-name">Cloudiness</span>
-        </div>
-        <div class="weather-data__figure">
-          <span class="weather-data__figure-value">3.6 m/s</span>
-          <span class="weather-data__figure-icon"
-            ><i class="fas fa-wind"></i
-          ></span>
-          <span class="weather-data__figure-name">Wind</span>
-        </div>
-        <div class="weather-data__figure">
-          <span class="weather-data__figure-value">100%</span>
-          <span class="weather-data__figure-icon"
-            ><i class="fas fa-tint"></i
-          ></span>
-          <span class="weather-data__figure-name">Humidity</span>
+      <div class="weather-data__lower">
+        <h3 class="weather-data__location">London</h3>
+        <div class="weather-data__time">Mon | FEB 11 | 17:20</div>
+        <div class="weather-data__figures">
+          <div class="weather-data__figure">
+            <span class="weather-data__figure-name">Cloudiness</span
+            ><span class="weather-data__figure-icon"
+              ><i class="fas fa-cloud"></i></span
+            ><span class="weather-data__figure-value">90%</span>
+          </div>
+          <div class="weather-data__figure">
+            <span class="weather-data__figure-name">Wind</span
+            ><span class="weather-data__figure-icon"
+              ><i class="fas fa-wind"></i></span
+            ><span class="weather-data__figure-value">3.6 m/s</span>
+          </div>
+          <div class="weather-data__figure">
+            <span class="weather-data__figure-name">Humidity</span
+            ><span class="weather-data__figure-icon"
+              ><i class="fas fa-cloud"></i></span
+            ><span class="weather-data__figure-value">100%</span>
+          </div>
         </div>
       </div>
     </div>
