Removed icons, styled desktop version.

--- a/app/index.html
+++ b/app/index.html
@@ -42,21 +42,15 @@
         <div class="weather-data__time">Mon | FEB 11 | 17:20</div>
         <div class="weather-data__figures">
           <div class="weather-data__figure">
-            <span class="weather-data__figure-name">Cloudiness</span
-            ><span class="weather-data__figure-icon"
-              ><i class="fas fa-cloud"></i></span
+            <span class="weather-data__figure-name">Clouds</span
             ><span class="weather-data__figure-value">90%</span>
           </div>
           <div class="weather-data__figure">
             <span class="weather-data__figure-name">Wind</span
-            ><span class="weather-data__figure-icon"
-              ><i class="fas fa-wind"></i></span
             ><span class="weather-data__figure-value">3.6 m/s</span>
           </div>
           <div class="weather-data__figure">
             <span class="weather-data__figure-name">Humidity</span
-            ><span class="weather-data__figure-icon"
-              ><i class="fas fa-cloud"></i></span
             ><span class="weather-data__figure-value">100%</span>
           </div>
         </div>
